log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: log-output-read
          image: skinatro/log-output-read:latest
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
        - name: log-output-gen
          image: skinatro/log-output-gen:latest
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
